--- a/card.html
+++ b/card.html
@@ -7,12 +7,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="card.css">
-
+    <link rel="stylesheet" href=
+    "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Explore 👉🏻</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,42 +22,60 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
+              </li> -->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Links
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#https://drive.google.com/file/d/1UBH8W1iW0RTXrXqJLevRvalSNlZiDqUy/view?usp=drivesdk">Certified Yoga Trainer</a></li>
+                  <li><a class="dropdown-item" href="#https://pepul.page.link/aHd1eV9FKTmCRsaB8">Pepul official Creator</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#https://youtube.com/playlist?list=PLZIC4V9WUjNSUgfNCFWIIwcwQaHWrimwD">Meditation Music</a></li>
+                </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  More
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#learn">What you will learn</a></li>
+                  <li><a class="dropdown-item" href="#join">Who can join</a></li>
+                  <li><a class="dropdown-item" href="#whyus">Why Us</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="#Review">Reviews</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#Contact">Contact</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
+            <!-- <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form> -->
           </div>
         </div>
       </nav>
       <div class="container">
-      <h1 style="color:antiquewhite; margin-top: 20px;">&nbsp;Hey Happy to see you here!</h1>
+      <h1 style="color:antiquewhite; margin-top: 20px;">Hey! Happy to see you here, Welcome to <b><em>Magical Yoga</em></b></h1>
+      <h3 style="color:antiquewhite; margin-top: 10px;"><b>Instructor & Founder: <em>Sundaram R</em></b></h3>
+      <h5 style="color:antiquewhite; margin-top: 3px;"><em>Having 9 years of experience, Certified yoga trainer by Ministry of Ayush.<br> National yoga player, Currently spreading the awarness of yoga to the world!</em></h5>
       <img src="circular logo.png" alt="LOGO" height="200rem" width="200rem">
       <div class="card" style="width: 18rem; margin: 10px">
         <div class="card-body">
           <h5 class="card-title">Magical Yoga</h5>
           <h6 class="card-subtitle mb-2 text-muted">yoga the art of living </h6>
-          <p class="card-text">Take charge of your health<br>right now... <br> To lead a happy life ahead,<br> Let's Join the Yoga Journey!</p>
+          <p class="card-text">Take charge of your health<br>right now... <br> To lead a happy life ahead,<br> Let's Join this Yoga Journey!</p>
         
-          <a href="https://pep.live/magical_yoga/e1da9f79-ca7c-49cc-9bee-7ecd7498344d/plan/book/529a7083-0ed1-4e65-be7e-18bc8dfc004b">
-            <button class="btn btn-primary btn-xl"> Book Now </button>
+          <a href="https://pep.live/s/1li97bks5v" target="_blank">
+            <button class="btn btn-primary btn-xl"> Join Now </button>
+          </a>
+          <a href="https://linktr.ee/Sundaram_R" target="_blank">
+            <button class="btn btn-primary btn-xl"> Connect with us </button>
           </a>
         </div>
       </div> 
@@ -65,11 +84,12 @@
 
 
 
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin: 20px 0px 0px 10px">
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin: 10px 0px 0px 10px;">
     Click Here
   </button>
+</div> -->
 
-
+<!--Font-->
 
 
   
@@ -90,12 +110,73 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Okay</button>
         </div>
       </div>
     </div>
 </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+  <div class='light x1'></div>
+  <div class='light x2'></div>
+  <div class='light x3'></div>
+  <div class='light x4'></div>
+  <div class='light x5'></div>
+  <div class='light x6'></div>
+  <div class='light x7'></div>
+  <div class='light x8'></div>
+  <div class='light x9'></div>
+
+  <div id="learn">
+    <h1 style="color:antiquewhite"><b>What you will learn:</b></h1>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;<span style="color: rgb(23, 249, 23)">✔</span> Yoga asanas for physical fitness</h5>
+    <br>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;<span style="color: rgb(23, 249, 23)">✔</span> Pranayama for well being</h5>
+    <br>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;<span style="color: rgb(23, 249, 23)">✔</span> Mediation for mental peace</h5>
+  </div>
+
+  <div id="join">
+    <h1 style="color:antiquewhite"><b>Who can Join:</b></h1>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;👉🏻For Students: Yoga will help you to be energized, healthy all the time as well as help you to score good marks in your exams.</h5>
+    <br>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;👉🏻For Employee: Yoga will help you to get promoted in your company, You will be positive enough to balance your work and life.</h5>
+    <br>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;👉🏻Business person: yoga will help you to get more clients as well as you will scale it to next level. Even if your business is going down you will be able to create new strategy calmly.</h5>
+    <br>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;👉🏻For House wife: yoga will help you to complete your works faster, so that you can chill for long time.</h5>
+    <br>
+    <h5 style="color:antiquewhite">&nbsp;&nbsp;&nbsp;<span style="color: rgb(23, 249, 23)">✔</span> Basically Yoga is for Everyone who wish to become an <span style="color: rgb(181, 255, 20); font-size: 26px; "  id="outline" ><b>Optimistic and Healthiest Person.🧡</b></span></h5>
+  </div>
+
+  <div id="whyus">
+    <h1 style="color:antiquewhite"><b>Why Us?</b></h1>
+    <h5 style="color:antiquewhite">The best ever Interesting, Interacting and fun filled online tamil yoga <br>session is the major thing why people love to join <b>Magical Yoga family</b>.
+    <br><em>"I want to be unhealthy - said nobody"</em>, So why not you can invest in your<br> health when it is also going to be fun filled as well as which will take you<br> to the next level of your Life?<br>
+   <br>Think and act upon it! See you soon in our Live session🤗</h5>
+   <a href="https://pep.live/s/1li97bks5v" target="_blank">
+    <button class="btn btn-primary btn-xl whyus"> Join Now </button>
+  </a>
+  </div>
+
+  <div id="Review">  
+    <h1 style="color:antiquewhite; margin-top: 20px;"><b>Student Reviews</b></h1>
+  <div class="images">
+    <div class="photo">
+        <img src="rev2.jpeg" alt="photo" style="width:100%">
+    </div>
+
+    <div class="photo">
+        <img src="rev1.jpeg" alt="photo" style="width:100%">
+    </div>
+</div>
+</div>
+
+<div id="Contact">
+  <h1 style="color:antiquewhite"><b>Contact</b></h1>
+  <h5 style="color:antiquewhite">WhatsApp: 9884524742</h5>
+  <h5 style="color:antiquewhite">Mail: <a href="mailto:magicalyoga2614@gmail.com">magicalyoga2614@gmail.com</a></h5>
+</div>
   </body>
 </html>
