--- a/card.html
+++ b/card.html
@@ -170,6 +170,7 @@
     <div class="photo">
         <img src="rev1.jpeg" alt="photo" style="width:100%">
     </div>
+    <h6 style="color:antiquewhite; margin-top: 20px;">Click the image to Enlarge</h5>
 </div>
 </div>
 
