--- a/card.html
+++ b/card.html
@@ -30,10 +30,10 @@
                   Links
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#https://drive.google.com/file/d/1UBH8W1iW0RTXrXqJLevRvalSNlZiDqUy/view?usp=drivesdk">Certified Yoga Trainer</a></li>
-                  <li><a class="dropdown-item" href="#https://pepul.page.link/aHd1eV9FKTmCRsaB8">Pepul official Creator</a></li>
+                  <li><a class="dropdown-item" href="https://drive.google.com/file/d/1UBH8W1iW0RTXrXqJLevRvalSNlZiDqUy/view?usp=drivesdk">Instructor Certification</a></li>
+                  <li><a class="dropdown-item" href="https://pepul.page.link/aHd1eV9FKTmCRsaB8" target="_blank">Pepul official Creator</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#https://youtube.com/playlist?list=PLZIC4V9WUjNSUgfNCFWIIwcwQaHWrimwD">Meditation Music</a></li>
+                  <li><a class="dropdown-item" href="https://youtube.com/playlist?list=PLZIC4V9WUjNSUgfNCFWIIwcwQaHWrimwD" target="_blank">Meditation Music</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -179,5 +179,6 @@
   <h5 style="color:antiquewhite">WhatsApp: 9884524742</h5>
   <h5 style="color:antiquewhite">Mail: <a href="mailto:magicalyoga2614@gmail.com">magicalyoga2614@gmail.com</a></h5>
 </div>
+
   </body>
 </html>
